...
 */
@SuppressLint("UnusedMaterial3ScaffoldPaddingParameter")
@OptIn(ExperimentalMaterial3Api::class, ExperimentalFoundationApi::class)
@Composable
fun TreasuryMainScreen(navActions: NavigationActions) {
    Scaffold(
        modifier = Modifier.testTag("treasuryScreen"),
        topBar = {
            TreasuryTopBar({}, {})
        },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier.testTag("createReceipt"),
                containerColor = MaterialTheme.colorScheme.surface,
                contentColor = MaterialTheme.colorScheme.primary,
                onClick = { },
            ) {
                Icon(Icons.Outlined.Add, "Create")
            }
...
 */
@Composable
private fun MyReceiptPage() {
    //val receiptNames = listOf("Grocery Shopping", "Restaurant", "Gas Station", "Coffee Shop")
    val receiptNames = List(50) { "Receipt $it" }
    LazyColumn(
        modifier = Modifier.testTag("ReceiptList"),
        verticalArrangement = Arrangement.spacedBy(0.dp, Alignment.Top),
        horizontalAlignment = Alignment.CenterHorizontally
    ) {
        receiptNames.forEach { receiptName ->
            item {
                ReceiptItem(receiptName)
...
