...
  if (showDialog) {
    DatePickerDialog(
        modifier = Modifier.testTag("datePickerDialog"),
        onDismissRequest = { showDialog = false },
        confirmButton = {
          Button(
              modifier = Modifier.testTag("datePickerDialogOk"),
              onClick = {
                showDialog = false
                onDateSelect(selectedDate)
              }) {
                Text(text = "OK")
              }
...
