...
                                state.selectedAssociation.uid,
                                state.selectedAssociation.leadIcon),
                        opened = state.openAssociationDropdown,
                        onOpenedChange = { viewmodel.controlAssociationDropdown(it) },
                        onSelectOption = { viewmodel.setAssociation(it) },
                        modifier =
                            Modifier.testTag("associationDropdown")
                                .align(Alignment.CenterHorizontally))

                    Text(text = "Settings", style = MaterialTheme.typography.titleMedium)

                    Column(
                        modifier =
...
